--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
     "dev": "nuxt",
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
-    "export": "nuxt-ts export",
     "serve": "nuxt-ts serve",
-    "generate": "nuxt-ts build && nuxt-ts export",
+    "generate": "nuxt-ts build && nuxt-ts generate",
     "deploy": "yarn generate && gh-pages -d dist -b master -r git@github.com:craftcodery/craftcodery.github.io.git -t"
   },
   "dependencies": {
     "@nuxt/typescript-runtime": "^0.4.10",
-    "nuxt": "^2.13.0"
+    "nuxt": "^2.15.0"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^1.0.3",
-    "@nuxtjs/tailwindcss": "^2.0.0",
-    "@tailwindcss/ui": "^0.3.0",
-    "gh-pages": "^3.1.0"
+    "@nuxt/types": "^2.0.0",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^3.4.3",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.0",
+    "gh-pages": "^3.1.0",
+    "tailwindcss": "2.0.1-compat",
+    "typescript": "~4.2"
   }
 }
